run benchmark for transactions only once